--- a/112208077_Bonus_HW.css
+++ b/112208077_Bonus_HW.css
@@ -3,10 +3,10 @@ body {
   padding: 0;
 }
 
-h1 {
+p {
   text-align: center;
   font-family: sans-serif;
-  font-size: 36px;
+  font-size: 45px;
 }
 
 form {
